# cli

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  build.rs  moon.yml
.cursor/skills/authdog-cli-platform/: SKILL.md  reference.md
.github/workflows/: ci.yml  cli-install-deploy.yml  create-tag.yml  dependency-scan.yml  release.yml
.moon/: toolchain.yml  workspace.yml
assets/: oauth_callback_success.html
install/: SPEC.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
install/src/: index.ts
scripts/: assert_release_tag_matches_cargo.py  compute_release_tag.py  create-local-release-tag.sh  push-local-release-tag.sh
src/: app.rs  browse.rs  cli_login.rs  lib.rs  main.rs  organizations.rs  projects.rs  session_store.rs  tenants.rs  tui_output.rs  whoami.rs
src/commands/: dispatch.rs  mod.rs  registry.rs
wasm/: Cargo.toml  moon.yml
wasm/src/: lib.rs
