[package]
name = "authdog-cli"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
directories = "6.0"
open = "5.3"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = "0.15.3"
unicode-width = "0.2.2"
uuid = { version = "1", features = ["v4"] }
