[workspace]
members = [".", "wasm"]
resolver = "2"
default-members = ["."]

[package]
name = "authdog-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# Release tagging (Makefile `tag` / GitHub Actions "Create release tag"):
# - stable = false → tags are `v{version}-beta.{n}` (n increments across existing beta tags).
# - stable = true → tag is exactly `v{version}`.
[package.metadata.authdog-release]
stable = false

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1", features = ["v4"] }

[lib]
path = "src/lib.rs"

[features]
default = ["desktop"]
# Terminal binary + OAuth + HTTP (native only).
desktop = [
  "dep:crossterm",
  "dep:directories",
  "dep:figlet-rs",
  "dep:open",
  "dep:ratatui",
  "dep:reqwest",
  "dep:tui-input",
  "dep:unicode-width",
  "dep:url",
  "dep:uuid",
]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

crossterm = { version = "0.29.0", optional = true }
directories = { version = "6.0", optional = true }
figlet-rs = { version = "1.0.0", optional = true }
open = { version = "5.3", optional = true }
ratatui = { version = "0.30.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
], optional = true }
tui-input = { version = "0.15.3", optional = true }
unicode-width = { version = "0.2.2", optional = true }
url = { version = "2.5", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[[bin]]
name = "authdog-cli"
path = "src/main.rs"
required-features = ["desktop"]

[profile.release]
strip = "symbols"
